--- a/nassh/html/nassh_test.html
+++ b/nassh/html/nassh_test.html
@@ -4,6 +4,8 @@
     <script src='../js/nassh_deps.concat.js'></script>
 
     <script src='../js/nassh.js'></script>
+    <script src='../js/nassh_agent_message.js'></script>
+    <script src='../js/nassh_agent_message_types.js'></script>
     <script src='../js/nassh_column_list.js'></script>
     <script src='../js/nassh_command_instance.js'></script>
     <script src='../js/nassh_connect_dialog.js'></script>
@@ -23,6 +25,8 @@
 
     <script src='../js/nassh_test.js'></script>
     <script src='../js/nassh_tests.js'></script>
+    <script src='../js/nassh_agent_message_tests.js'></script>
+    <script src='../js/nassh_agent_message_types_tests.js'></script>
     <script src='../js/nassh_command_instance_tests.js'></script>
 
     <style>
