nassh: Add Smart Card Connector library as a dependency
Add the 1.2.10.0 release of the Google Smart Card Connector client
library as a dependency.

The current release of the library is available at
https://github.com/GoogleChrome/chromeos_smart_card_connector/releases

BUG=chromium:712699
Change-Id: I8913d56413d7d77b2d5d00f57ccaad55f30ee952

--- a/nassh/html/nassh.html
+++ b/nassh/html/nassh.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src='../js/nassh_deps.concat.js'></script>
+    <script src='../third_party/google-smart-card/google-smart-card-client-library.js'></script>
 
     <script src='../js/nassh.js'></script>
     <script src='../js/nassh_command_instance.js'></script>
