--- a/nassh/html/nassh.html
+++ b/nassh/html/nassh.html
@@ -13,6 +13,7 @@
     <script src='../js/nassh_agent.js'></script>
     <script src='../js/nassh_agent_backend.js'></script>
     <script src='../js/nassh_agent_backend_gsc.js'></script>
+    <script src='../js/nassh_agent_backend_gsc.concat.js'></script>
     <script src='../js/nassh_preference_manager.js'></script>
     <script src='../js/nassh_stream.js'></script>
     <script src='../js/nassh_stream_set.js'></script>
