--- a/nassh/html/nassh.html
+++ b/nassh/html/nassh.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset='utf-8'/>
 
+    <!-- Order should match manifest.json. -->
     <script src='../js/nassh_deps.concat.js'></script>
     <script src='../third_party/google-smart-card/google-smart-card-client-library.js'></script>
 
     <script src='../js/nassh.js'></script>
-    <script src='../js/nassh_command_instance.js'></script>
-    <script src='../js/nassh_google_relay.js'></script>
-    <script src='../js/nassh_main.js'></script>
+    <script src='../js/nassh_agent_message.js'></script>
+    <script src='../js/nassh_agent_message_types.js'></script>
+    <script src='../js/nassh_agent.js'></script>
+    <script src='../js/nassh_agent_backend.js'></script>
+    <script src='../js/nassh_agent_backend_gsc.js'></script>
     <script src='../js/nassh_preference_manager.js'></script>
-    <script src='../js/nassh_relay.js'></script>
-    <script src='../js/nassh_relay_sshfe.js'></script>
     <script src='../js/nassh_stream.js'></script>
     <script src='../js/nassh_stream_set.js'></script>
     <script src='../js/nassh_stream_tty.js'></script>
@@ -20,11 +21,11 @@
     <script src='../js/nassh_stream_relay_sshfe.js'></script>
     <script src='../js/nassh_stream_sshagent.js'></script>
     <script src='../js/nassh_stream_sshagent_relay.js'></script>
-    <script src='../js/nassh_agent_message.js'></script>
-    <script src='../js/nassh_agent_message_types.js'></script>
-    <script src='../js/nassh_agent.js'></script>
-    <script src='../js/nassh_agent_backend.js'></script>
-    <script src='../js/nassh_agent_backend_gsc.js'></script>
+    <script src='../js/nassh_relay.js'></script>
+    <script src='../js/nassh_google_relay.js'></script>
+    <script src='../js/nassh_relay_sshfe.js'></script>
+    <script src='../js/nassh_command_instance.js'></script>
+    <script src='../js/nassh_main.js'></script>
 
     <style>
       body {
