nassh: fsp: add tests
This should catch regressions as we refactor & change this code.
We tweak the fsp layers itself slightly to make testing easier,
or in the case of onMountRequested, fix the function signature.

Change-Id: I0d951b924a92547c245860dbfdb251be41a5e61f
Reviewed-on: https://chromium-review.googlesource.com/c/1449903
Reviewed-by: Vitaliy Shipitsyn <vsh@google.com>
Tested-by: Mike Frysinger <vapier@chromium.org>

--- a/nassh/html/nassh_test.html
+++ b/nassh/html/nassh_test.html
@@ -21,6 +21,7 @@
     <script src='../js/nassh_stream_google_relay.js'></script>
     <script src='../js/nassh_stream_sshagent_relay.js'></script>
     <script src='../js/nassh_sftp_client.js'></script>
+    <script src='../js/nassh_sftp_fsp.js'></script>
     <script src='../js/nassh_sftp_packet.js'></script>
     <script src='../js/nassh_sftp_packet_types.js'></script>
     <script src='../js/nassh_sftp_status.js'></script>
@@ -33,6 +34,7 @@
     <script src='../js/nassh_agent_message_tests.js'></script>
     <script src='../js/nassh_agent_message_types_tests.js'></script>
     <script src='../js/nassh_command_instance_tests.js'></script>
+    <script src='../js/nassh_sftp_fsp_tests.js'></script>
     <script src='../js/nassh_sftp_packet_tests.js'></script>
     <script src='../js/nassh_sftp_packet_types_tests.js'></script>
 
