--- a/nassh/html/nassh_test.html
+++ b/nassh/html/nassh_test.html
@@ -19,6 +19,7 @@
     <script src='../js/nassh_stream_tty.js'></script>
     <script src='../js/nassh_stream_google_relay.js'></script>
     <script src='../js/nassh_stream_relay_sshfe.js'></script>
+    <script src='../js/nassh_stream_sftp.js'></script>
     <script src='../js/nassh_stream_sshagent.js'></script>
     <script src='../js/nassh_stream_sshagent_relay.js'></script>
     <script src='../js/nassh_relay.js'></script>
