nassh: Bundle licenses of prod NPM dependencies
Provides a python script that collects the license file contents of all
NPM dependencies and exports them as a libdot resource.

The libapps NPM dependencies are divided into dev and prod dependencies
depending on whether their code will be part of the extension in the
Chrome Web Store or not.

Change-Id: I592fd0f03cde535b9c8d53ad8756db2d6d9c1d43

--- a/nassh/html/nassh_preferences_editor.html
+++ b/nassh/html/nassh_preferences_editor.html
@@ -29,6 +29,8 @@
           <li><a id='restore' href='#restore' i18n-content='RESTORE_PREFS'
                  >Restore Backup</a>
             <input class='restore' type='file'></li>
+          <li><a id='licenses' href='licenses.html' i18n-content='LICENSES'
+                 target='_blank'>Licenses</a></li>
         </ul>
       </div>
 
